<resources>
    <string name="app_name">Sprint Planning</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="hello_name">Hello, %1$s!</string>
    <string name="room_id">Room ID</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_requires_camera">QR Code requires access to your device camera</string>
    <string name="profile">Profile</string>
    <string name="change_avatar">Click to change your avatar</string>
    <string name="name">Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="room">Room</string>
    <string name="vote_in_progress">Voting in progress</string>
    <string name="hour_short">h</string>
    <string name="minute_short">m</string>
    <string name="second_short">s</string>
    <string name="vote_count">%1$d/%2$d players voted</string>
    <string name="show_results">Show Results</string>
    <string name="reset_vote">Reset Vote</string>
    <string name="settings">Settings</string>
    <string name="font_size">Font size</string>
    <string name="change_font_size">Change font size application wide</string>
    <string name="card_size">Card size</string>
    <string name="change_card_size">Change card size application wide</string>
    <string name="theme">Theme</string>
    <string name="change_theme">Change the application theme</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_system">System Theme</string>
    <string name="contact_us">Contact us</string>
    <string name="give_feedback">Report bugs or send feedback</string>
    <string name="share_room">Share Room</string>
    <string name="share_id">Share this ID for others to join</string>
    <string name="share_qr">Let others scan this QR Code to connect</string>

    <string name="user_limit">User limit</string>
    <string name="max_num_users">Maximum number of users</string>
    <string name="ask_to_join">Ask to join</string>
    <string name="should_ask_to_join">If enabled, admit newcomers manually</string>

    <string name="room_settings">Room Settings</string>
    <string name="export_results">Export Results</string>
    <string name="disband_room">Disband Room</string>

    <string name="vote">Vote</string>
    <string name="default_username">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>