<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/btn_join_room"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/round_rectangle_shape"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/join_room"
        android:textSize="16sp"
        android:theme="@style/MainMenu.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sub_title" />

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/round_rectangle_shape"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_room"
        android:textSize="16sp"
        android:theme="@style/MainMenu.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_seperator" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_avatar"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/hello_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <ImageView
        android:id="@+id/img_seperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_join_room"
        app:srcCompat="@drawable/group_48" />


</androidx.constraintlayout.widget.ConstraintLayout>