<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.lobby.LobbyFragment">

    <ImageView
        android:id="@+id/img_leave"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leave_icon" />

    <TextView
        android:id="@+id/txt_vote_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/vote_count"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_room_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_users"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/nav_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vote_status" />

    <Button
        android:id="@+id/btn_show_results"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_rectangle_shape"
        android:fontFamily="@font/roboto"
        android:text="@string/show_results"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view_vote" />


    <LinearLayout
        android:id="@+id/scroll_view_vote"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:background="@color/nav_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_users">

        <LinearLayout
            android:id="@+id/linear_layout_vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_vote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DADADA"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/vote"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/linear_layout_vote_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:scrollbars="horizontal|none">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_room_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/img_room_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="Room"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="Voting in progress (21m 32s)"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_room_share"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/share_from_square_solid"
        app:layout_constraintEnd_toStartOf="@+id/img_leave"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>